# flight-price-modeling-mlops

./: .gitignore  LICENSE  MANIFEST.in  README.md  dvc.yaml  environment-dev.yaml  environment-prod.yaml  pyproject.toml  setup.py  template.py
.dvc/: config
configs/: data-source.yaml  training-config.yaml
notebooks/: 01_data_cleaning_and_split.ipynb
notebooks/helpers/: data_diagnostics.py
scripts/: data_acquisition.py  ingest_db.py
src/flight_price_predictor/components/: data_ingestion.py
src/flight_price_predictor/config/: configuration.py  entity_config.py
src/flight_price_predictor/core/: constants.py  exception.py  logging_setup.py
src/flight_price_predictor/utils/: data_io.py
